fixed alignment and spacing in css.

--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@
         text-align: center;
         font-size: 32px;
         margin-top: 10px;
+        padding-bottom: 30px;
+        padding-top: 30px;
     }
 }
 
@@ -53,6 +55,7 @@
     padding: 15px 20px 15px 20px;
     border-radius: 60px;
     box-shadow: 4px 4px 6px #4444;
+    margin: 15px;
 }
 
 .button:hover {
@@ -67,9 +70,12 @@
     background-color: dimgray;
     box-shadow: 2px 2px 4px #4444;
     border-radius: 65px;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 25px;
+    display: inline-block;
+    justify-content: center;
+    margin: 0px 20px;
+    h3 {
+        margin: 20px;
+    }
 }
 
 /* Image Gallery */
